hphp/test/zend/bad/objects_014.php
<?php

interface foo {
}

interface bar extends foo, foo {
}	

echo "Done\n";
?>